# E-votingWebapp

./: README.md
backend/: .env  Cargo.toml  build.rs
backend/migrations/: 20251001120000_create_admins_table.sql  20251001150000_create_voters_table.sql  20251001160000_create_polls_table.sql  20251001165206_create_authorities_table.sql  20251001170000_add_authority_management.sql
backend/src/: build.rs  crypto_ffi.rs  main.rs
crypto_service/: CMakeLists.txt
crypto_service/include/: CMakeLists.txt
crypto_service/src/: aggregate.cpp  aggregate.h  blindsign.cpp  blindsign.h  checkkorverify.cpp  checkkorverify.h  crypto_bridge.cpp  didgen.cpp  didgen.h  keygen.cpp  keygen.h  keygen_bridge.cpp  keygen_bridge.h  keygen_parallel_backup.cpp  kor.cpp  kor.h  main.cpp  main_parallel_backup.cpp  pairinginverify.cpp  pairinginverify.h  params.txt  prepareblindsign.cpp  prepareblindsign.h  provecredential.cpp  provecredential.h  setup.cpp  setup.h  setup_bridge.cpp  setup_bridge.h  unblindsign.cpp  unblindsign.h
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: AdminLogin.tsx  AuthorityLogin.tsx  AuthorityPanel.tsx  KeyGenDisplay.tsx  PollManagement.tsx  SetupParamsDisplay.tsx  VoterLogin.tsx  VoterPanel.tsx  VoterUpload.tsx
