[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart", "headers"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate","chrono"] }

sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
futures-util = "0.3"
tower-http = { version = "0.4", features = ["cors"] }